Додела + начал делать докер(не работате)

--- a/Frontend/admin.html
+++ b/Frontend/admin.html
@@ -8,7 +8,7 @@
         * { margin: 0;
         padding: 0;
         box-sizing: border-box;
-        font-family: Candara, sans-serif;}
+        font-family: 'Times New Roman', sans-serif;}
         body { background: linear-gradient(135deg, #e3f2fd, #ffffff);
         color: #333; min-height: 100vh;
         padding-top: 70px;}
