--- a/Frontend/cook.html
+++ b/Frontend/cook.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: Candara, sans-serif;
+            font-family: 'Times New Roman', sans-serif;
         }
 
         body {
@@ -375,7 +375,7 @@
 
     <div class="main-layout">
         <aside class="left-panel">
-            <button class="prof" onclick="window.location.href='/logout'" title="Выйти">П</button>
+            <button class="prof" onclick="window.location.href='/logout'" title="Выйти">В</button>
             <header class="head">
                 <h1>Панель повара</h1>
             </header>
