--- a/Frontend/student.html
+++ b/Frontend/student.html
@@ -8,7 +8,7 @@
     * { margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Candara, sans-serif;}
+    font-family: 'Times New Roman', sans-serif;}
     body { background: linear-gradient(135deg, #e3f2fd, #ffffff);
     color: #333;
     min-height: 100vh;
@@ -334,7 +334,6 @@
             userAllergens = data.allergens;
 
             document.getElementById('username').textContent = userData.username;
-            // форматированный ID
             document.getElementById('userId').textContent = `ID: ${userData.formatted_id}`;
             document.getElementById('userBalance').textContent = `${userData.balance} ₽`;
 
