--- a/Frontend/cook.html
+++ b/Frontend/cook.html
@@ -413,7 +413,7 @@
 
                     <div style="text-align: right; margin-bottom: 15px;">
                         <button onclick="openCreateModal()" style="background: #673AB7; width: auto;">
-                            Добавить новое (Блюдо/Продукт)
+                            Добавить новое блюдо/продукт
                         </button>
                     </div>
 
